Complete FilterFile tests

--- a/tests/AssemblyRunnerTests/AssemblyRunnerTests.csproj
+++ b/tests/AssemblyRunnerTests/AssemblyRunnerTests.csproj
@@ -50,4 +50,13 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="data\filter-data-02.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\filter-data-01.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
