--- a/src/AssemblyRunner/AssemblyRunner.csproj
+++ b/src/AssemblyRunner/AssemblyRunner.csproj
@@ -20,7 +20,23 @@
     <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="xunit.runner.utility" Version="2.4.1" />
+  <PropertyGroup>
+    <RestoreAdditionalProjectSources>https://www.myget.org/F/xunit/api/v3/index.json</RestoreAdditionalProjectSources>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net35'">
+    <PackageReference Include="xunit.runner.utility">
+      <Version>2.4.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="xunit.runner.utility">
+      <Version>2.4.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="xunit.runner.utility">
+      <Version>2.4.2-pre.build.4112</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
