--- a/tests/AssemblyRunnerTests/AssemblyRunnerTests.csproj
+++ b/tests/AssemblyRunnerTests/AssemblyRunnerTests.csproj
@@ -4,6 +4,11 @@
     <TargetFrameworks>net35;net461;netcoreapp2.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <RestoreAdditionalProjectSources>https://www.myget.org/F/xunit/api/v3/index.json</RestoreAdditionalProjectSources>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\AssemblyRunner\AssemblyRunner.csproj" />
   </ItemGroup>
@@ -49,6 +54,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
 
   <ItemGroup>
     <None Update="data\filter-data-02.txt">
