--- a/src/AssemblyRunner/AssemblyRunner.csproj
+++ b/src/AssemblyRunner/AssemblyRunner.csproj
@@ -25,16 +25,19 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net35'">
+    <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.runner.utility">
       <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.utility">
       <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="xunit" Version="2.4.2-pre.build.4112" />
     <PackageReference Include="xunit.runner.utility">
       <Version>2.4.2-pre.build.4112</Version>
     </PackageReference>
